Fix unintended horizontal overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 
+html, body { overflow-x: hidden }
 body {
   font-family: 'Raleway', sans-serif;
   margin: 0;
